HomeWork12 WebServer fix in ClientsApiServlet